@@ -22,3 +22,4 @@ export const defaultHeight = 70;
 export const headerVerticalOffset = 25;
 export const labelVerticalPadding = 8;
 export const labelHorizontalPadding = 16;
+export const borderNodeReferencePositionRatio = 0.2;
